0025265: Perspective projection - selecting front point of two